<resources>
    <string name="app_name">CLARIGO JOB TASK APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_placholder_image">ce_staff_image</string>
    <string name="delete_employee_title">Delete Clarigo Employee</string>
    <string name="sure_to_delete">Are you sure you?</string>
    <string name="ok">YES</string>
    <string name="cancel_delete">NO</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="select_dob">Select Dob</string>
    <string name="save_employee">Save</string>
    <string name="enter_name_error">Ensure you have entered your name</string>
    <string name="enter_valid_email">Ensure you have entered a valid email</string>
    <string name="chose_dob">Chose Date Of Birth</string>
    <string name="new_employee_saved">New Employee Saved</string>
    <string name="enter_birth_date">Enter your date of birth</string>
    <string name="submit_birth_date">SUBMIT BIRTH DATE</string>
    <string name="cancel_dob">CANCEL</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="clarigo_task">Clarigo-Task</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="update">Update</string>
</resources>