<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/update_photo"
        android:layout_width="@dimen/user_placeholder_dimen"
        android:layout_height="@dimen/user_placeholder_dimen"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_placholder_image"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textpadding"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/textpadding"
            android:hint="@string/enter_name"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/almendra"
                android:inputType="textPersonName"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ce_email_layout"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/email"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:fontFamily="@font/almendra"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/update_edit_passport"
        android:layout_width="@dimen/icons_dimen"
        android:layout_height="@dimen/icons_dimen"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        android:scaleType="fitCenter"
        app:riv_border_color="@color/cardview_dark_background"
        app:riv_corner_radius="40dp"
        app:riv_border_width="2dip"
        android:src="@drawable/ic_baseline_edit_white_24"
        app:layout_constraintBottom_toTopOf="@+id/name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_photo"
        app:layout_constraintVertical_bias="0.869" />

        <TextView
            android:id="@+id/update_dob"
            style="@style/OtherStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="@dimen/sixteen_dp_padding"
            android:paddingEnd="@dimen/sixteen_dp_padding"
            android:text="@string/select_dob"
            android:textSize="@dimen/dob_size"
            app:layout_constraintEnd_toEndOf="@+id/ce_email_layout"
            app:layout_constraintStart_toStartOf="@+id/ce_email_layout"
            app:layout_constraintTop_toBottomOf="@+id/ce_email_layout" />


    <Button
        android:id="@+id/update_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/almendra"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/update_dob"
        app:layout_constraintStart_toStartOf="@+id/update_dob"
        app:layout_constraintTop_toBottomOf="@id/update_dob" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>